themes/fuckflickr/css/stylesheet.css
/*
##############################################################
##    ___              __     ___ __ __        __           ##
##  .'  _|.--.--.----.|  |--.'  _|  |__|.----.|  |--.----.  ##
##  |   _||  |  |  __||    <|   _|  |  ||  __||    <|   _|  ##
##  |__|  |_____|____||__|__|__| |__|__||____||__|__|__|    ##
##############################################################
        default fuckflickr theme - HACK AWAY MOFO
*/


/******** general *******/
body {
  font-size: 10px; 
  font-family: Geneva, Arial, sans-serif;
}

a {
  color: blue;
}
a:hover {
  background-color: #ff0085;
  color: white;
} 
a:focus{
  -moz-outline:none; 
  outline:none;
}

input,form{
  font-size:9px;
}

p, h1, h2, h3, h4, h5 { 
  margin: 0; 
  padding: 2px 0; 
}


/******* layout *********/
#container {
  min-width: 980px; /* 3 images wide; TODO doesn't work in IE */
}

#header {
  padding: 0px 20px 10px 20px;
}
#header a {
  text-decoration: none;
  font-weight: bold;
}
#header a:hover {
  color: white; /* gone but not forgotten */
}

#header h1 {
  margin: 0;
  padding: 0;
  display: inline;
  clear: both;
  font-size: 1em;
}

#header #logo a {
  border-bottom: 2px solid transparent; display: block;
  margin: 2px 0 5px 0;
}
#header #logo a:hover {
  border-bottom: 2px solid #ff0085;
}
#header #logo a img {background-color: #FFFFFF;}
#header #logo, /* humping graphic */
#header #fuckflickr-info { /* "why we should boycott..." */
  float: left;
}
#header #fuckflickr-info {
  color: #ff0085;
  margin: 25px 0 0 30px;
  width: 270px;
}

#main {
 padding: 0 20px 20px 20px;
}

#settings {
  float: right;
  margin: 25px 10% 0 20px;
}

#navigation {
  clear: both;
  font-size: 13pt;
  background-color: #ffffaa;
  padding: 10px 0 10px 20px;
  margin: 0 0 15px 0;
}

.rss {
  float: right;
  margin-right: 35px;
  margin-top: -2px;
}

.pagination {clear: both; margin: 15px 0 5px 0; padding: 0;}


#footer {
  padding-top: 60px;
  clear: both;
  color: #999;
}




/******* gallery display ******/

#directories {
 margin: 10px 0 20px 0;
 padding: 5px 10px;
 min-height: 25px;
}

.directory a {
/*  width: 100px;*/
/*  height: 20px;*/
  background: #efe url('../images/folder.png') no-repeat 0 50%;
  border: 1px solid #d0f5d0;
  padding: 15px 10px 15px 40px;
  float: left;
  margin-right: 10px;
}
.directory a:hover {
  background-color: #ff0085;
  border: 1px solid #000;
}


#images {
  clear: both; 
  padding: 20px 0;
}

.thumb-wrapper {
  width: 300px; 
  min-height: 260px;  /* FIXME does not work in IE6 (do we care?) */
  float: left;
  margin-right: 10px;
}

.thumb {
  position:relative; 
  top: 0px; 
  left: 0px; 
  width: 300px; 
  height: 225px; 
  overflow: hidden;
  text-align: center; 
  background-color: black; 
  margin-right: 10px;
}

.preview a { /* given a background-image dynamically */
  float: left;
  position: relative; 
  top: 0px; 
  left: 0px;
  display: block;
  border: 5px solid transparent; /* pimped out on hover */
  width: 110px;  /* 120px - 2*border */
  height: 70px; /* 80px - 2*border */
  background-position: -5px -5px;
  overflow: hidden;
  text-align: center; 
  background-color: black;
  margin: 0 6px 5px 0;
  padding-top: 10px;
  text-decoration: none;
}
.preview a:hover {
  border: 5px solid #ff0085;
}

.preview span { /* the actual text of the preview */
  background-color: white; 
  color: black;
  padding: 2px 4px;
}

.info {
/*  min-height:80px;*/
  background-color:white;
  font-size: 9px; /* non-gecko rendering engines actually go down to 1px; don't use that */ 
}

.description {padding: 8px 0 0 0;}
.meta {padding: 8px 0 30px 0;}

.hi-res { margin-left: 5px; } /* give the man some elbow room geeze */
.embed { margin-left: 8px; }


h1#title {margin: 5px 0 3px 0; padding: 0; font-size: 24px; line-height: 27px;}
h3#description {font-size: 13px; margin: 5px 0 3px 0; padding: 0; line-height: 15px; font-weight: normal;}


#directories:after, #images:after {content: "."; clear: both; display: block; visibility: hidden; font-size: 0; line-height: 0; height: 0;}

